--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, 'About Us') %>
 <h1>About Us</h1>
+<h2>Tau Kappa Epsilon</h2>
 <p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+  Founded in (?), we are blah blah blah.
+</p>
+<hr>
+<h2>Animal Clinic</h2>
+<p>
+  We care about animals blah blah.
 </p>
