Lots of changes. Working

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,13 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
+<h3>TKE</h3>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">contact page</a>.
+	Keith Thomas - Phone - Email <br>
+	Ryan Clare - Phone - Email <br>
+	Jimmy Iverson - Phone - Email <br>
+</p>
+<br>
+<h3>Animal Clinic</h3>
+<p>
+	Somebody - Phone - Email
 </p>
