--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,30 +1,27 @@
-<% if signed_in? %>
-  <div class="row">
-    <aside class="span4">
-      <section>
-        <%= render 'shared/user_info' %>
-      </section>
-    </aside>
-    <aside class="span8">
-      (Donation Button)
-    </aside>
-  </div>
-<% else %>
-  <div class="center hero-unit">
-    <h1>(Picture of cute TKE dog)</h1>
+<div class="center hero-unit">
+  <h1>(Picture of cute TKE dog)</h1>
 
-    <h2>
+  <h2>
       This is the home page for the sponsored 5K brought to you
       by (animal clinic name + link) and the TKE fraternity at UIC.
-    </h2>
-
-    <h2>
+  </h2>
+  
+  <% if !signed_in? %>
+  <h2>
       Sign up here so that you don't have to 
       bring cash to the event!
-    </h2>
+  </h2>
 
-    <%= link_to "Sign up now!", signup_path, 
+  <%= link_to "Sign up now!", signup_path, 
                                 class: "btn btn-large btn-primary" %>
-  </div>
+  <% end %>
+</div>
 
-<% end %>
+<div style="align: center;">
+  <h2>What?</h2>
+    <p>A 5K run to help raise awareness about abandoned animals.</p>
+  <h2>When?</h2>
+    <p>May 8th from 8 AM to 3 PM.</p>
+  <h2>Where?</h2>
+    <p>Busse Woods, Schaumburg, IL.</p>
+</div>
