--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,10 +2,12 @@
 <h1>About Us</h1>
 <h2>Tau Kappa Epsilon</h2>
 <p>
-  Founded in (?), we are blah blah blah.
+  TKE is a college fraternity, founded in 1899. We are the University of
+  Illinois at Chicago branch, and this fundraiser is a way for us to
+  help out our community in a small way.
 </p>
 <hr>
-<h2>Animal Clinic</h2>
+<h2>Friends of Chicago Animal Care</h2>
 <p>
-  We care about animals blah blah.
+  Friends of Chicago Animal Care and Control (FCACC) is the nonprofit group committed exclusively to helping save the lives of over 23,000 animals that come into custody of Chicago Animal Care and Control (ACC) at 2741 S. Western each year.
 </p>
