--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,10 @@
 <div class="center hero-unit">
-  <h1>(Picture of cute TKE dog)</h1>
+  <%= image_tag "http://i1.cpcache.com/product/174879044/i_love_tke_dog_tshirt.jpg?height=160&width=160", :alt => "Cute Puppy Picture" %>
 
   <h2>
       This is the home page for the sponsored 5K brought to you
-      by (animal clinic name + link) and the TKE fraternity at UIC.
+      by Friends of Chicago Animal Care and Control and the TKE 
+      fraternity at UIC.
   </h2>
   
   <% if !signed_in? %>
@@ -17,11 +18,17 @@
   <% end %>
 </div>
 
-<div style="align: center;">
-  <h2>What?</h2>
-    <p>A 5K run to help raise awareness about abandoned animals.</p>
-  <h2>When?</h2>
-    <p>May 8th from 8 AM to 3 PM.</p>
-  <h2>Where?</h2>
-    <p>Busse Woods, Schaumburg, IL.</p>
+<div>
+  <h4>What?</h4>
+    <p>A 5K run to help raise money for abandoned animals.</p>
+  <h4>When?</h4>
+    <p>May 4th from 8 AM to 3 PM.</p>
+  <h4>Where?</h4>
+    <p>
+	Busse Woods, Elk Grove, IL.<br>
+        Forest preserve at E. Higgins Rd. and Arlington Heights Rd.<br>
+	A little east of Woodfield Mall in Schaumburg.    
+    </p>
 </div>
+
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;output=embed" style="display: block;"></iframe><br /><small><a href="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
