--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,12 +2,12 @@
 <h1>Contact</h1>
 <h3>TKE</h3>
 <p>
-	Keith Thomas - Phone - Email <br>
-	Ryan Clare - Phone - Email <br>
-	Jimmy Iverson - Phone - Email <br>
+	Keith Thomas / (847)553-6232 / keiferr@live.com <br>
+	Ryan Clare / (630)337-1991<br>
+	Jimmy Iverson / (815)274-9628<br>
 </p>
 <br>
 <h3>Animal Clinic</h3>
 <p>
-	Somebody - Phone - Email
+	(773)743-9000 / cpropsom@sbcglobal.net
 </p>
