--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,11 @@
 <div class="center hero-unit">
-  <%= image_tag "http://i1.cpcache.com/product/174879044/i_love_tke_dog_tshirt.jpg?height=160&width=160", :alt => "Cute Puppy Picture" %>
+  <%= image_tag "http://imgur.com/aq28hjN.jpg", :alt => "Animal Clinic Puppies" %>
 
   <h2>
       This is the home page for the sponsored 5K brought to you
-      by Friends of Chicago Animal Care and Control and the TKE 
+      by 
+      <a href="http://fcacc.org/fcacc_home/index.php">Friends of Chicago Animal Care</a> and Control and the 
+      <a href="http://www.tke.org/">TKE</a> 
       fraternity at UIC.
   </h2>
   
