--- a/app/views/static_pages/me.html.erb
+++ b/app/views/static_pages/me.html.erb
@@ -5,13 +5,13 @@
         <%= render 'shared/user_info' %>
       </section>
     </aside>
-    <aside class="span8">
+   <aside class="span8">
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="LT5RUSSA67MGG">
+<input type="hidden" name="hosted_button_id" value="SMHPNCXSQQNAW">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-    </aside>
+  </aside>
   </div>
 <% end %>
