Updated documentation & touched up site

--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -10,5 +10,5 @@
 <% if current_user.donated %>
 <p style="color: green;">Donated!</p>
 <% else %>
-<p style="color: red;">Hasn't donated yet.</p>
+<p style="color: red;">You haven't donated yet.</p>
 <% end %>
