--- a/app/views/static_pages/me.html.erb
+++ b/app/views/static_pages/me.html.erb
@@ -5,13 +5,35 @@
         <%= render 'shared/user_info' %>
       </section>
     </aside>
-   <aside class="span8">
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="SMHPNCXSQQNAW">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+   <aside style="text-align: center;" class="span8">
+<span style="font-size: 14px;">
+	It's a set $25 donation, giving you entry to the race.<br>
+	Simply give your name at the race to enter.<br><br>
+</span>
+<span style="margin-right: auto; margin-left: auto; text-align:center;">
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="SMHPNCXSQQNAW">
+		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+	</form>
+</span>
   </aside>
   </div>
+
+  <hr>
+  <div style="text-align: center;">
+    <h4>What?</h4>
+      <p>A 5K run to help raise money for abandoned animals.</p>
+    <h4>When?</h4>
+      <p>May 4th from 8 AM to 3 PM.</p>
+    <h4>Where?</h4>
+      <p>
+	Busse Woods, Elk Grove, IL.<br>
+        Forest preserve at E. Higgins Rd. and Arlington Heights Rd.<br>
+	A little east of Woodfield Mall in Schaumburg.    
+      </p>
+  </div>
+
+  <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;output=embed" style="display: block; margin-left: auto; margin-right: auto;"></iframe><br /><small><a href="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 <% end %>
