--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="center hero-unit">
+  <h1>Busse Woods 5K</h1>
   <%= image_tag "http://imgur.com/aq28hjN.jpg", :alt => "Animal Clinic Puppies" %>
 
   <h2>
-      This is the home page for the sponsored 5K brought to you
+      This event is brought to you
       by 
-      <a href="http://fcacc.org/fcacc_home/index.php">Friends of Chicago Animal Care</a> and Control and the 
+      <a href="http://fcacc.org/fcacc_home/index.php">Friends of Chicago Animal Care and Control</a> and the 
       <a href="http://www.tke.org/">TKE</a> 
       fraternity at UIC.
   </h2>
@@ -20,7 +21,8 @@
   <% end %>
 </div>
 
-<div>
+<hr>
+<div style="text-align: center;">
   <h4>What?</h4>
     <p>A 5K run to help raise money for abandoned animals.</p>
   <h4>When?</h4>
@@ -33,4 +35,4 @@
     </p>
 </div>
 
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;output=embed" style="display: block;"></iframe><br /><small><a href="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;output=embed" style="display: block; margin-left: auto; margin-right: auto;"></iframe><br /><small><a href="https://maps.google.com/?ie=UTF8&amp;ll=42.028735,-87.989674&amp;spn=0.01935,0.039482&amp;t=m&amp;z=15&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
