--- a/app/views/static_pages/me.html.erb
+++ b/app/views/static_pages/me.html.erb
@@ -24,7 +24,7 @@
   <hr>
   <div style="text-align: center;">
     <h4>What?</h4>
-      <p>A 5K run to help raise money for abandoned animals.</p>
+      <p>This is a low key event and all the proceeds will go to the Friends of Chicago Animal Care and Control organization which helps all the different animals in the Animal Care and Control Shelter in Chicago. They are a non-profit shelter that takes in thousands of animals a year and the only care these animals get is from the wonderful volunteers. Due to the massive amount of animals being abandoned, most dogs are only able to get outside once a day. We're looking to raise as much money as we can for basic necessities for the animals like food and medical care. Any and all contributions welcome!</p>
     <h4>When?</h4>
       <p>July 20th from 8 AM to 3 PM.</p>
     <h4>Where?</h4>
